--- a/tidy-test/Cargo.toml
+++ b/tidy-test/Cargo.toml
@@ -3,6 +3,7 @@ name = "tidy-test"
 version = "0.1.0"
 authors = ["Wolfgang Grimm <grimm@mondial.at>"]
 edition = "2018"
+publish = false
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
