--- a/tidy-test/Cargo.toml
+++ b/tidy-test/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "tidy-test"
-version = "0.1.1"
+version = "0.1.2-alpha.0"
 authors = ["Wolfgang Grimm <grimm@mondial.at>"]
 edition = "2018"
 publish = false
