--- a/tidy/Cargo.toml
+++ b/tidy/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "tidy"
-version = "0.1.2"
+version = "0.1.3-alpha.0"
 authors = ["Wolfgang Grimm <grimm@mondial.at>"]
 edition = "2018"
 links = "tidy"
