--- a/tidy-bin/Cargo.toml
+++ b/tidy-bin/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "tidy-bin"
-version = "0.1.3-alpha.0"
+version = "0.1.3"
 authors = ["Wolfgang Grimm <grimm@mondial.at>"]
 edition = "2018"
 publish = false
