Added doc to tidy fns, changed dir struct

--- a/tidy-bin/Cargo.toml
+++ b/tidy-bin/Cargo.toml
@@ -9,4 +9,4 @@ publish = false
 
 [dependencies]
 libc = "0.2"
-tidy = { vversion = "0.1.0", path = "../tidy" }
+tidy = { vversion = "0.1.0", path = "../tidy-lib" }
