Restructuring, added docs

--- a/tidy-bin/Cargo.toml
+++ b/tidy-bin/Cargo.toml
@@ -9,4 +9,5 @@ publish = false
 
 [dependencies]
 libc = "0.2"
-tidy = { vversion = "0.1.0", path = "../tidy-lib" }
+tidy = { path = "../tidy-rs" }
+
