--- a/tidy-rs/Cargo.toml
+++ b/tidy-rs/Cargo.toml
@@ -18,3 +18,6 @@ cc = { version = "1.0", features = ["parallel"] }
 pkg-config = "0.3"
 glob = "0.3.0"
 
+[features]
+default = []
+pkg-config = ["tidy-sys/pkg-config"]
