--- a/tidy-sys/Cargo.toml
+++ b/tidy-sys/Cargo.toml
@@ -16,5 +16,9 @@ libc = "0.2"
 regex = "1"
 bindgen = "0.55"
 cc = { version = "1.0", features = ["parallel"] }
-pkg-config = "0.3"
 glob = "0.3.0"
+cmake = "0.1"
+
+[build-dependencies.pkg-config]
+optional = true
+version = "0.3"
